--- a/form.html
+++ b/form.html
@@ -6,5 +6,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Assessment1</title>
   </head>
-  <body></body>
+  <body>
+    <form>
+      <label for="angka1">Angka 1:</label>
+      <input type="number" id="angka1" name="angka1" /><br />
+
+      <label for="angka2">Angka 2:</label>
+      <input type="number" id="angka2" name="angka2" /><br />
+
+      <label for="operator">Operator:</label>
+      <select id="operator" name="operator">
+        <option value="+">+</option>
+        <option value="-">-</option>
+        <option value=""></option>
+        <option value="/">/</option></select
+      ><br />
+
+      <input type="submit" value="Hitung" />
+    </form>
+  </body>
 </html>
